--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:text="@string/numero_de_registros"
+                android:text="@string/numero_de_livros"
                 android:textStyle="bold"
                 android:textSize="15sp"/>
 
