--- a/app/src/main/res/drawable/model_item_recycle_view.xml
+++ b/app/src/main/res/drawable/model_item_recycle_view.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorSecundaryLight"/>
+            <solid android:color="@color/colorPrimaryLight"/>
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="10sp" />
         </shape>
