--- a/app/src/main/res/layout/activity_new_word.xml
+++ b/app/src/main/res/layout/activity_new_word.xml
@@ -1,23 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="view.NewBookActivity"
-    android:background="@color/colorPrimaryLight">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="view.NewBookActivity"
+        android:background="@color/colorPrimaryLight">
+
+    <!--<TextView-->
+            <!--android:id="@+id/livro_label"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/livro_numero_label"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textSize="15sp"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:layout_marginStart="20dp" />-->
+
+    <!--<TextView-->
+            <!--android:id="@+id/livro_num"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="0"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textSize="15sp"-->
+            <!--android:paddingLeft="5sp"-->
+            <!--app:layout_constraintStart_toEndOf="@+id/livro_label"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--android:layout_marginTop="20dp"/>-->
 
     <TextView
             android:id="@+id/word_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:text="@string/word_label"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
             android:id="@+id/word_text"
@@ -29,18 +52,18 @@
             android:layout_marginStart="40dp"
             android:hint="@string/hint_word"
             app:layout_constraintTop_toBottomOf="@+id/word_label"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
             android:id="@+id/meaning_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:text="@string/meaning_label"
             app:layout_constraintTop_toBottomOf="@+id/word_text"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
             android:id="@+id/meaning_text"
@@ -52,7 +75,53 @@
             android:layout_marginStart="40dp"
             android:hint="@string/hint_meaning"
             app:layout_constraintTop_toBottomOf="@+id/meaning_label"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+            android:id="@+id/autor_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:text="@string/autor_label"
+            app:layout_constraintTop_toBottomOf="@+id/meaning_text"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    <EditText
+            android:id="@+id/autor_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textAutoComplete"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:hint="@string/hint_autor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/autor_label"/>
+
+    <TextView
+            android:id="@+id/preco_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/preco_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/autor_text"/>
+
+    <EditText
+            android:id="@+id/preco_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
+            android:hint="@string/hint_preco"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/preco_label"/>
 
     <Button
             android:id="@+id/btn_save"
@@ -67,7 +136,7 @@
             android:background="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_delete" />
+            app:layout_constraintEnd_toStartOf="@+id/btn_delete"/>
 
     <Button
             android:id="@+id/btn_delete"
@@ -82,6 +151,6 @@
             android:background="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_save" />
+            app:layout_constraintStart_toEndOf="@+id/btn_save"/>
 
 </android.support.constraint.ConstraintLayout>
