--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/model_item_recycle_view"
+              android:layout_margin="5sp">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/word_txt_size"
-        android:textStyle="bold"
-        android:paddingLeft="@dimen/word_padding"
-        android:layout_margin="@dimen/word_margin"
-        android:background="@drawable/model_item_recycle_view" />
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/word_txt_size"
+            android:textStyle="bold"
+            android:paddingLeft="@dimen/word_padding"
+            android:layout_margin="@dimen/word_margin"/>
+
+    <TextView
+            android:id="@+id/textViewAutor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            android:paddingLeft="20sp"/>
+
 </LinearLayout>
