--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,18 +46,19 @@
                 android:layout_below="@+id/include"
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal"
-                android:layout_gravity="bottom|start"
+                android:layout_gravity="top|start"
+
                 android:paddingLeft="15sp"
-                android:paddingBottom="10sp">
+                android:paddingTop="66sp">
 
             <TextView
-                android:id="@+id/number_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:text="@string/numero_de_livros"
-                android:textStyle="bold"
-                android:textSize="15sp"/>
+                    android:id="@+id/number_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    android:text="@string/numero_de_livros"
+                    android:textStyle="bold"
+                    android:textSize="15sp"/>
 
             <TextView
                     android:id="@+id/number_content"
