--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,54 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="word_txt_size">24sp</dimen>
-    <dimen name="word_padding">8sp</dimen>
-    <dimen name="word_margin">5sp</dimen>
+    <dimen name="height_icon_add">24dp</dimen>
+    <dimen name="margin_item_book">5sp</dimen>
+    <dimen name="margin_bottom_btn_delete">40dp</dimen>
+    <dimen name="margin_bottom_btn_save">40dp</dimen>
+    <dimen name="margin_end_btn_save">40dp</dimen>
+    <dimen name="margin_end_btn_delete">80dp</dimen>
+    <dimen name="margin_item_listner">5sp</dimen>
+    <dimen name="margin_left_autor_label">20dp</dimen>
+    <dimen name="margin_left_autor_txt">40dp</dimen>
+    <dimen name="margin_left_book_label">20dp</dimen>
+    <dimen name="margin_left_book_txt">40dp</dimen>
+    <dimen name="margin_left_btn_delete">40dp</dimen>
+    <dimen name="margin_left_btn_save">80dp</dimen>
+    <dimen name="margin_left_genero_label">20dp</dimen>
+    <dimen name="margin_left_genero_txt">40dp</dimen>
+    <dimen name="margin_left_preco_label">20dp</dimen>
+    <dimen name="margin_left_preco_txt">40dp</dimen>
+    <dimen name="margin_right_btn_delete">80dp</dimen>
+    <dimen name="margin_right_btn_save">40dp</dimen>
+    <dimen name="margin_start_autor_label">20dp</dimen>
+    <dimen name="margin_start_autor_txt">40dp</dimen>
+    <dimen name="margin_start_book_label">20dp</dimen>
+    <dimen name="margin_start_book_txt">40dp</dimen>
+    <dimen name="margin_start_btn_delete">40dp</dimen>
+    <dimen name="margin_start_btn_save">80dp</dimen>
+    <dimen name="margin_start_genero_label">20dp</dimen>
+    <dimen name="margin_start_genero_txt">40dp</dimen>
+    <dimen name="margin_start_preco_label">20dp</dimen>
+    <dimen name="margin_start_preco_txt">40dp</dimen>
+    <dimen name="margin_top_autor_label">30dp</dimen>
+    <dimen name="margin_top_autor_txt">20dp</dimen>
+    <dimen name="margin_top_book_label">40dp</dimen>
+    <dimen name="margin_top_book_txt">20dp</dimen>
+    <dimen name="margin_top_genero_label">30dp</dimen>
+    <dimen name="margin_top_genero_txt">20dp</dimen>
+    <dimen name="margin_top_preco_label">30dp</dimen>
+    <dimen name="margin_top_preco_txt">20dp</dimen>
+    <dimen name="margin_top_recycler_view">25dp</dimen>
+    <dimen name="paddin_item_book">8sp</dimen>
+    <dimen name="paddin_bottom_autor">5sp</dimen>
+    <dimen name="paddin_left_item_autor">20sp</dimen>
+    <dimen name="paddin_left_total_layout">15sp</dimen>
+    <dimen name="paddin_left_total_txt">5sp</dimen>
+    <dimen name="paddin_top_recycler_view">12sp</dimen>
+    <dimen name="paddin_top_total_layout">66sp</dimen>
+    <dimen name="txt_size_item_autor">20sp</dimen>
+    <dimen name="txt_size_item_book">24sp</dimen>
+    <dimen name="txt_size_total_label">15sp</dimen>
+    <dimen name="txt_size_total_txt">15sp</dimen>
+    <dimen name="width_icon_add">24dp</dimen>
+    <dimen name="margin_item_autor">5sp</dimen>
 </resources>
