--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/blabla"
         tools:context="view.MainActivity"
+        android:id="@+id/blabla"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -24,7 +24,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.AppBarLayout>
 
@@ -33,7 +33,7 @@
                 android:id="@+id/include"/>
 
         <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab"
+                android:id="@+id/add_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
@@ -41,35 +41,34 @@
                 app:srcCompat="@drawable/icon_add"/>
 
         <LinearLayout
+                android:id="@+id/total_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/include"
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal"
                 android:layout_gravity="top|start"
-
-                android:paddingLeft="15sp"
-                android:paddingTop="66sp">
+                android:paddingLeft="@dimen/paddin_left_total_layout"
+                android:paddingTop="@dimen/paddin_top_total_layout">
 
             <TextView
-                    android:id="@+id/number_label"
+                    android:id="@+id/total_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|end"
-                    android:text="@string/numero_de_livros"
+                    android:text="@string/total_label"
                     android:textStyle="bold"
-                    android:textSize="15sp"/>
+                    android:textSize="@dimen/txt_size_total_label"/>
 
             <TextView
-                    android:id="@+id/number_content"
+                    android:id="@+id/total_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="5sp"
-                    android:text="0"
+                    android:paddingLeft="@dimen/paddin_left_total_txt"
+                    android:text="@string/total_txt"
                     android:layout_gravity="bottom|end"
-                    android:paddingBottom="0sp"
                     android:textStyle="bold"
-                    android:textSize="15sp"/>
+                    android:textSize="@dimen/txt_size_total_txt"/>
         </LinearLayout>
 
 
