--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,23 +4,25 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/model_item_recycle_view"
-              android:layout_margin="5sp">
+              android:layout_margin="@dimen/margin_item_listner">
 
     <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/word_txt_size"
+            android:textSize="@dimen/txt_size_item_book"
             android:textStyle="bold"
-            android:paddingLeft="@dimen/word_padding"
-            android:layout_margin="@dimen/word_margin"/>
+            android:paddingLeft="@dimen/paddin_item_book"
+            android:layout_margin="@dimen/margin_item_book"/>
 
     <TextView
             android:id="@+id/textViewAutor"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="@dimen/txt_size_item_autor"
             android:textStyle="italic"
-            android:paddingLeft="20sp"/>
+            android:paddingLeft="@dimen/paddin_left_item_autor"
+            android:layout_margin="@dimen/margin_item_autor"
+            android:paddingBottom="@dimen/paddin_bottom_autor"/>
 
 </LinearLayout>
