--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorAccent">#90B9E8</color>
+    <color name="color_icon_add">#FF000000</color>
+    <color name="colorItemListner">#C3D4E8</color>
+    <color name="colorMenu">#D5DEE8</color>
     <color name="colorPrimary">#497fb5</color>
     <color name="colorPrimaryDark">#035385</color>
-    <color name="colorPrimaryLight">#7caee7</color>
+    <color name="colorPrimaryLight">#D5DEE8</color>
     <color name="colorSecundary">#307fb5</color>
-    <color name="colorSecundaryDark">#005385</color>
+    <color name="colorSecundaryDark">#90B9E8</color>
     <color name="colorSecundaryLight">#665b92c2</color>
-    <color name="colorAccent">#256591</color>
 </resources>
