--- a/app/src/main/res/layout/activity_new_book.xml
+++ b/app/src/main/res/layout/activity_new_book.xml
@@ -74,6 +74,7 @@
             android:layout_marginLeft="@dimen/margin_left_genero_txt"
             android:layout_marginStart="@dimen/margin_start_genero_txt"
             android:hint="@string/genero_hint"
+            android:maxLength="12"
             app:layout_constraintTop_toBottomOf="@+id/genero_label"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -120,6 +121,7 @@
             android:layout_marginStart="@dimen/margin_start_preco_txt"
             android:hint="@string/preco_hint"
             android:inputType="numberDecimal"
+            android:maxLength="9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/preco_label"/>
 
