--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,28 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/book_item"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/model_item_recycle_view"
               android:layout_margin="@dimen/margin_item_listner">
 
-    <TextView
-            android:id="@+id/textView"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/txt_size_item_book"
-            android:textStyle="bold"
-            android:paddingLeft="@dimen/paddin_item_book"
-            android:layout_margin="@dimen/margin_item_book"/>
+            android:orientation="horizontal">
 
     <TextView
-            android:id="@+id/textViewAutor"
+            android:id="@+id/textView"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".50"
+            android:paddingLeft="@dimen/paddin_item_book"
+            android:textSize="@dimen/txt_size_item_book"
+            android:textStyle="bold"
+            android:textAlignment="textStart"
+            android:gravity="start"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="@dimen/margin_item_autor" />
+
+    <TextView
+            android:id="@+id/textViewGenero"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".30"
+            android:textSize="@dimen/txt_size_item_book"
+            android:textStyle="italic"
+            android:textAlignment="textEnd"
+            android:gravity="end"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="@dimen/margin_item_autor" />
+
+    </LinearLayout>
+
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/txt_size_item_autor"
-            android:textStyle="italic"
-            android:paddingLeft="@dimen/paddin_left_item_autor"
-            android:layout_margin="@dimen/margin_item_autor"
-            android:paddingBottom="@dimen/paddin_bottom_autor"/>
+            android:orientation="horizontal">
+
+        <TextView
+                android:id="@+id/textViewAutor"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".50"
+                android:textSize="@dimen/txt_size_item_autor"
+                android:textStyle="italic"
+                android:paddingLeft="@dimen/paddin_left_item_autor"
+                android:layout_margin="@dimen/margin_item_autor"
+                android:paddingBottom="@dimen/paddin_bottom_autor"/>
+
+        <TextView
+                android:id="@+id/textViewPreco"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".40"
+                android:textSize="@dimen/txt_size_item_autor"
+                android:textStyle="italic"
+                android:textAlignment="textEnd"
+                android:gravity="end"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="@dimen/margin_item_autor"
+                android:paddingBottom="@dimen/paddin_bottom_autor"/>
+
+    </LinearLayout>
 
 </LinearLayout>
