--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
           android:title="@string/action_clear_list"
           android:orderInCategory="100"
           app:showAsAction="never"/>
+
+    <item android:id="@+id/action_add_book"
+          android:title="Adicionar Livro"
+          android:orderInCategory="100"
+          app:showAsAction="always"
+          android:icon="@drawable/icon_add_circle"/>
 </menu>
