Revert "2019/05/02 - Final Version"
This reverts commit f04af2df9fe0cc7c10f975562c4029b09939350e.

--- a/app/src/main/res/drawable/model_item_recycle_view.xml
+++ b/app/src/main/res/drawable/model_item_recycle_view.xml
@@ -3,7 +3,8 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorItemListner"/>
-            <corners android:radius="10sp"/>
+            <!--corners allow us to make the rounded corners button-->
+            <corners android:radius="10sp" />
         </shape>
     </item>
 </selector>
